Social image chnaged

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     />
     <meta
       name="description"
-      content="Web Developer, Proficient in JavaScript, React, Node.js, Docker, and AWS."
+      content="Proficient in JavaScript, React, Node.js, Docker, and AWS. I am passionate about writing and sharing what I’ve learned via blog.vnoit.com"
     />
+    <meta name="author" content="Vinoth Kumar" />
 
     <!-- Theme from - http://ruvenpelka.com/demos/desmond-resume/dark/ -->
     <!-- Critical Path CSS Generator  - https://jonassebastianohlsson.com/criticalpathcssgenerator/ -->
@@ -615,10 +616,10 @@
     <meta property="og:title" content="Vinoth Kumar | Web Developer" />
     <meta
       property="og:description"
-      content="Web Developer, Proficient in JavaScript, React, Node.js, Docker, and AWS."
+      content="Proficient in JavaScript, React, Node.js, Docker, and AWS. I am passionate about writing and sharing what I’ve learned via blog.vnoit.com"
     />
 
-    <meta name="og:site_name" content="vnoit.com" />
+    <meta property="og:site_name" content="vnoit.com" />
     <meta name="og:email" content="vnoitkumar@gmail.com" />
     <meta name="og:phone_number" content="+917708521528" />
 
@@ -629,7 +630,7 @@
     <meta property="og:image:alt" content="vnoit.com" />
     <meta
       property="og:image"
-      content="https://vnoit.com/images/social/og.jpg"
+      content="https://vnoit.com/images/social/social.jpg"
     />
 
     <!-- Twitter Meta Tag -->
@@ -640,11 +641,11 @@
     <meta name="twitter:title" content="Vinoth Kumar | Web Developer" />
     <meta
       name="twitter:image"
-      content="https://vnoit.com/images/social/twitter.jpg"
+      content="https://vnoit.com/images/social/social.jpg"
     />
     <meta
       name="twitter:description"
-      content="Web Developer, Proficient in JavaScript, React, Node.js, Docker, and AWS."
+      content="Proficient in JavaScript, React, Node.js, Docker, and AWS. I am passionate about writing and sharing what I’ve learned via blog.vnoit.com"
     />
 
     <!-- Facebook App Id -->
@@ -676,7 +677,7 @@
     <meta itemprop="name" content="Vinoth Kumar | Web Developer" />
     <meta
       itemprop="description"
-      content="Web Developer, Proficient in JavaScript, React, Node.js, Docker, and AWS."
+      content="Proficient in JavaScript, React, Node.js, Docker, and AWS. I am passionate about writing and sharing what I’ve learned via blog.vnoit.com"
     />
 
     <link rel="canonical" href="https://vnoit.com" />
@@ -875,27 +876,11 @@
                       <div class="a-header o-content">
                         <div class="o-content__body">
                           <a
-                            href="https://goo.gl/maps/JTKDJt1uG8vbtvvi7"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                            aria-label="Location"
-                            class="t-link-container"
-                          >
-                            <h4>Location</h4>
-                            <address>Chennai, India</address>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                      <div class="a-header o-content">
-                        <div class="o-content__body">
-                          <a
                             href="tel:+917708521528"
                             class="t-link-container"
                             aria-label="Mobile Number"
                           >
-                            <h4>Phone</h4>
+                            <h4>Mobile</h4>
                             <p>+91 77085 21528</p>
                           </a>
                         </div>
@@ -915,6 +900,22 @@
                                 >vnoitkumar@gmail.com</span
                               >
                             </p>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                      <div class="a-header o-content">
+                        <div class="o-content__body">
+                          <a
+                            href="https://goo.gl/maps/JTKDJt1uG8vbtvvi7"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            aria-label="Location"
+                            class="t-link-container"
+                          >
+                            <h4>Location</h4>
+                            <address>Chennai, India</address>
                           </a>
                         </div>
                       </div>
@@ -1034,9 +1035,9 @@
                     <div class="o-grid__col-md-7">
                       <p>
                         Collaborating with developers and designers to design a
-                        Scalable App Architecture. Optimizing Components and
-                        improving the App’s Performance. Proficient in complete
-                        React Lifecycle & State Management Techniques.
+                        scalable app architecture. Optimizing components and
+                        improving the app’s performance. Proficient on complete
+                        react lifecycle and state management techniques.
                       </p>
                     </div>
                   </div>
@@ -1087,8 +1088,8 @@
                       <p>
                         Choosing the right SDLC model according to the specific
                         concerns and requirements of the project to ensure its
-                        success. Experienced with SQL Schema / RESTful API
-                        design and Writing Webhook.
+                        success. Experienced with SQL schema / RESTful API
+                        design and writing webhook.
                       </p>
                     </div>
                   </div>
@@ -1118,10 +1119,10 @@
                     <div class="o-grid__col-md-7">
                       <p>
                         Responsible for the web application development life
-                        cycle right from Planning and Architecture designing to
+                        cycle right from planning and architecture designing to
                         delivery and created the web app for EA bot as part of a
                         robotic project. Migrated the full server from AWS to
-                        GCP which includes Elastic Load Balancer​, IAM, DB etc.
+                        GCP which includes EC2, ELB, IAM, DB etc.
                       </p>
                     </div>
                   </div>
@@ -1503,27 +1504,11 @@
                   <div class="o-content">
                     <div class="o-content__body">
                       <a
-                        href="https://goo.gl/maps/JTKDJt1uG8vbtvvi7"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        aria-label="Location"
-                        class="t-link-container"
-                      >
-                        <h4>Location</h4>
-                        <address>Chennai, India</address>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="o-grid__col-md-3 o-grid__col-sm-6">
-                  <div class="o-content">
-                    <div class="o-content__body">
-                      <a
                         href="tel:+917708521528"
                         class="t-link-container"
                         aria-label="Mobile Number"
                       >
-                        <h4>Phone</h4>
+                        <h4>Mobile</h4>
                         <p>+91 77 08 521 528</p>
                       </a>
                     </div>
@@ -1543,6 +1528,22 @@
                             >vnoitkumar@gmail.com</span
                           >
                         </p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="o-grid__col-md-3 o-grid__col-sm-6">
+                  <div class="o-content">
+                    <div class="o-content__body">
+                      <a
+                        href="https://goo.gl/maps/JTKDJt1uG8vbtvvi7"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Location"
+                        class="t-link-container"
+                      >
+                        <h4>Location</h4>
+                        <address>Chennai, India</address>
                       </a>
                     </div>
                   </div>
