React name changed

--- a/src/index.html
+++ b/src/index.html
@@ -1037,7 +1037,7 @@
                         Collaborating with developers and designers to design a
                         scalable app architecture. Optimizing components and
                         improving the app’s performance. Proficient on complete
-                        react lifecycle and state management techniques.
+                        React lifecycle and state management techniques.
                       </p>
                     </div>
                   </div>
