New project added

--- a/src/index.html
+++ b/src/index.html
@@ -1236,7 +1236,7 @@
         <div class="o-section__container">
           <header class="o-section__header t-section__header">
             <div class="o-content">
-              <h2 class="o-section__heading">Projects</h2>
+              <h2 class="o-section__heading">Side Projects</h2>
               <div class="o-content__body o-section__description">
                 Busy working at.
               </div>
@@ -1352,6 +1352,23 @@
                     >
                       <h3>JS executer</h3>
                       <p>Online JavaScript Editor</p>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="o-grid__col-md-4 o-grid__col-sm-6">
+                <div class="o-content">
+                  <hr class="c-deco-line t-primary-color-line" />
+                  <div class="o-content__body">
+                    <a
+                      href="https://code-snap.vnoit.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Tab Sync"
+                      class="t-link-container"
+                    >
+                      <h3>Code Snap</h3>
+                      <p>Share your source code in image formate</p>
                     </a>
                   </div>
                 </div>
