Add TW as Experience

--- a/src/index.html
+++ b/src/index.html
@@ -1017,7 +1017,36 @@
                   <div class="o-grid">
                     <div class="o-grid__col-md-5">
                       <div class="c-work__timeframe">
-                        June 2020 &ndash; Present
+                        January 2021 &ndash; Present
+                      </div>
+                      <a
+                        href="https://www.google.com/search?q=thoughtworks"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="ThoughtWorks"
+                      >
+                        <h3 class="c-work__heading">ThoughtWorks</h3>
+                      </a>
+                      <h4 class="c-work__title">
+                        Senior Consultant
+                      </h4>
+                      <div class="c-work__location">Chennai, India</div>
+                    </div>
+                    <div class="o-grid__col-md-7">
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="c-timeline__item">
+                <div
+                  class="c-timeline__point t-timeline__point t-primary-bg"
+                ></div>
+                <div class="o-content">
+                  <div class="o-grid">
+                    <div class="o-grid__col-md-5">
+                      <div class="c-work__timeframe">
+                        June 2020 &ndash; December 2020
                       </div>
                       <a
                         href="https://www.google.com/search?q=contus"
