--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       content="Proficient in JavaScript, React, Node.js, Docker, and AWS. I am passionate about writing and sharing what I’ve learned via blog.vnoit.com"
     />
     <meta name="author" content="Vinoth Kumar" />
-
+    <meta name="google-adsense-account" content="ca-pub-4330351748795910">
     <!-- Theme from - http://ruvenpelka.com/demos/desmond-resume/dark/ -->
     <!-- Critical Path CSS Generator  - https://jonassebastianohlsson.com/criticalpathcssgenerator/ -->
     <style>
