--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     />
     <meta name="author" content="Vinoth Kumar" />
     <meta name="google-adsense-account" content="ca-pub-4330351748795910">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4330351748795910"
+      crossorigin="anonymous"></script>
     <!-- Theme from - http://ruvenpelka.com/demos/desmond-resume/dark/ -->
     <!-- Critical Path CSS Generator  - https://jonassebastianohlsson.com/criticalpathcssgenerator/ -->
     <style>
